add separate app start/stop endpoints
