# internal/server/server.gen.go
@@ -11,6 +11,15 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
+// Defines values for AppPropertyType.
+const (
+	AppPropertyTypePassword AppPropertyType = "password"
+
+	AppPropertyTypeService AppPropertyType = "service"
+
+	AppPropertyTypeString AppPropertyType = "string"
+)
+
 // Defines values for AppState.
 const (
 	AppStateError AppState = "error"
@@ -45,20 +54,35 @@ type AppList struct {
 	Items []App `json:"items"`
 }
 
-// AppSpec defines model for AppSpec.
-type AppSpec struct {
-	ActiveProfile string `json:"activeProfile"`
-	Enabled       bool   `json:"enabled"`
+// AppProfile defines model for AppProfile.
+type AppProfile struct {
+	App        string        `json:"app"`
+	Name       string        `json:"name"`
+	Properties []AppProperty `json:"properties"`
 }
+
+// AppProperty defines model for AppProperty.
+type AppProperty struct {
+	Name  string          `json:"name"`
+	Type  AppPropertyType `json:"type"`
+	Value *string         `json:"value,omitempty"`
+}
+
+// AppPropertyType defines model for AppPropertyType.
+type AppPropertyType string
+
+// AppSpec defines model for AppSpec.
+type AppSpec map[string]interface{}
 
 // AppState defines model for AppState.
 type AppState string
 
 // AppStatus defines model for AppStatus.
 type AppStatus struct {
-	Containers []Container `json:"containers"`
-	Node       *string     `json:"node,omitempty"`
-	State      AppState    `json:"state"`
+	ActiveProfile string      `json:"activeProfile"`
+	Containers    []Container `json:"containers"`
+	Node          *string     `json:"node,omitempty"`
+	State         AppState    `json:"state"`
 }
 
 // Container defines model for Container.
@@ -97,7 +121,8 @@ type EventList struct {
 // EventObject defines model for EventObject.
 type EventObject struct {
 	// Represents a set of capabilities that a host provides.
-	App *App `json:"app,omitempty"`
+	App     *App        `json:"app,omitempty"`
+	Profile *AppProfile `json:"profile,omitempty"`
 }
 
 // Metadata defines model for Metadata.
@@ -109,6 +134,12 @@ type Metadata struct {
 // UpdateAppJSONBody defines parameters for UpdateApp.
 type UpdateAppJSONBody App
 
+// StartAppParams defines parameters for StartApp.
+type StartAppParams struct {
+	// Name of an app profile
+	Profile *string `json:"profile,omitempty"`
+}
+
 // UpdateAppJSONRequestBody defines body for UpdateApp for application/json ContentType.
 type UpdateAppJSONRequestBody UpdateAppJSONBody
 
@@ -118,11 +149,26 @@ type ServerInterface interface {
 	// (GET /v1/apps)
 	ListApps(ctx echo.Context) error
 	// Get an app by name
-	// (GET /v1/apps/{name})
-	GetApp(ctx echo.Context, name string) error
+	// (GET /v1/apps/{app})
+	GetApp(ctx echo.Context, app string) error
 	// Update app
-	// (PUT /v1/apps/{name})
-	UpdateApp(ctx echo.Context, name string) error
+	// (PUT /v1/apps/{app})
+	UpdateApp(ctx echo.Context, app string) error
+	// Create app profile
+	// (POST /v1/apps/{app}/profile)
+	CreateAppProfile(ctx echo.Context, app string) error
+	// Get app profile
+	// (GET /v1/apps/{app}/profile/{profile})
+	GetAppProfile(ctx echo.Context, app string, profile string) error
+	// Update app profile
+	// (PUT /v1/apps/{app}/profile/{profile})
+	UpdateAppProfile(ctx echo.Context, app string, profile string) error
+	// Start an app
+	// (GET /v1/apps/{app}/start)
+	StartApp(ctx echo.Context, app string, params StartAppParams) error
+	// Stop an app
+	// (GET /v1/apps/{app}/stop)
+	StopApp(ctx echo.Context, app string) error
 	// Watch changes
 	// (GET /v1/events)
 	Watch(ctx echo.Context) error
@@ -145,32 +191,137 @@ func (w *ServerInterfaceWrapper) ListApps(ctx echo.Context) error {
 // GetApp converts echo context to params.
 func (w *ServerInterfaceWrapper) GetApp(ctx echo.Context) error {
 	var err error
-	// ------------- Path parameter "name" -------------
-	var name string
+	// ------------- Path parameter "app" -------------
+	var app string
 
-	err = runtime.BindStyledParameterWithLocation("simple", false, "name", runtime.ParamLocationPath, ctx.Param("name"), &name)
+	err = runtime.BindStyledParameterWithLocation("simple", false, "app", runtime.ParamLocationPath, ctx.Param("app"), &app)
 	if err != nil {
-		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter name: %s", err))
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter app: %s", err))
 	}
 
 	// Invoke the callback with all the unmarshalled arguments
-	err = w.Handler.GetApp(ctx, name)
+	err = w.Handler.GetApp(ctx, app)
 	return err
 }
 
 // UpdateApp converts echo context to params.
 func (w *ServerInterfaceWrapper) UpdateApp(ctx echo.Context) error {
 	var err error
-	// ------------- Path parameter "name" -------------
-	var name string
+	// ------------- Path parameter "app" -------------
+	var app string
 
-	err = runtime.BindStyledParameterWithLocation("simple", false, "name", runtime.ParamLocationPath, ctx.Param("name"), &name)
+	err = runtime.BindStyledParameterWithLocation("simple", false, "app", runtime.ParamLocationPath, ctx.Param("app"), &app)
 	if err != nil {
-		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter name: %s", err))
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter app: %s", err))
 	}
 
 	// Invoke the callback with all the unmarshalled arguments
-	err = w.Handler.UpdateApp(ctx, name)
+	err = w.Handler.UpdateApp(ctx, app)
+	return err
+}
+
+// CreateAppProfile converts echo context to params.
+func (w *ServerInterfaceWrapper) CreateAppProfile(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "app" -------------
+	var app string
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "app", runtime.ParamLocationPath, ctx.Param("app"), &app)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter app: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshalled arguments
+	err = w.Handler.CreateAppProfile(ctx, app)
+	return err
+}
+
+// GetAppProfile converts echo context to params.
+func (w *ServerInterfaceWrapper) GetAppProfile(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "app" -------------
+	var app string
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "app", runtime.ParamLocationPath, ctx.Param("app"), &app)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter app: %s", err))
+	}
+
+	// ------------- Path parameter "profile" -------------
+	var profile string
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "profile", runtime.ParamLocationPath, ctx.Param("profile"), &profile)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter profile: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshalled arguments
+	err = w.Handler.GetAppProfile(ctx, app, profile)
+	return err
+}
+
+// UpdateAppProfile converts echo context to params.
+func (w *ServerInterfaceWrapper) UpdateAppProfile(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "app" -------------
+	var app string
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "app", runtime.ParamLocationPath, ctx.Param("app"), &app)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter app: %s", err))
+	}
+
+	// ------------- Path parameter "profile" -------------
+	var profile string
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "profile", runtime.ParamLocationPath, ctx.Param("profile"), &profile)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter profile: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshalled arguments
+	err = w.Handler.UpdateAppProfile(ctx, app, profile)
+	return err
+}
+
+// StartApp converts echo context to params.
+func (w *ServerInterfaceWrapper) StartApp(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "app" -------------
+	var app string
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "app", runtime.ParamLocationPath, ctx.Param("app"), &app)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter app: %s", err))
+	}
+
+	// Parameter object where we will unmarshal all parameters from the context
+	var params StartAppParams
+	// ------------- Optional query parameter "profile" -------------
+
+	err = runtime.BindQueryParameter("form", true, false, "profile", ctx.QueryParams(), &params.Profile)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter profile: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshalled arguments
+	err = w.Handler.StartApp(ctx, app, params)
+	return err
+}
+
+// StopApp converts echo context to params.
+func (w *ServerInterfaceWrapper) StopApp(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "app" -------------
+	var app string
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "app", runtime.ParamLocationPath, ctx.Param("app"), &app)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter app: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshalled arguments
+	err = w.Handler.StopApp(ctx, app)
 	return err
 }
 
@@ -212,8 +363,13 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	}
 
 	router.GET(baseURL+"/v1/apps", wrapper.ListApps)
-	router.GET(baseURL+"/v1/apps/:name", wrapper.GetApp)
-	router.PUT(baseURL+"/v1/apps/:name", wrapper.UpdateApp)
+	router.GET(baseURL+"/v1/apps/:app", wrapper.GetApp)
+	router.PUT(baseURL+"/v1/apps/:app", wrapper.UpdateApp)
+	router.POST(baseURL+"/v1/apps/:app/profile", wrapper.CreateAppProfile)
+	router.GET(baseURL+"/v1/apps/:app/profile/:profile", wrapper.GetAppProfile)
+	router.PUT(baseURL+"/v1/apps/:app/profile/:profile", wrapper.UpdateAppProfile)
+	router.GET(baseURL+"/v1/apps/:app/start", wrapper.StartApp)
+	router.GET(baseURL+"/v1/apps/:app/stop", wrapper.StopApp)
 	router.GET(baseURL+"/v1/events", wrapper.Watch)
 
 }
